--- a/about.html
+++ b/about.html
@@ -100,8 +100,7 @@
 			</div>
 			<div id="heading-content">
 				<p>
-					SRM ENTERPRISES is a part of RANK Ad's Communications (Science 1984)
-					is in the Business of improving the brand visibility of leading brands
+					SRM ENTERPRISES is in the Business of improving the brand visibility of leading brands
 					in the country, with our expertise in Designing the personalised Gift
 					packing's for various corporate for occasions such as (Diwali/Dushera
 					/New year/Christmas) wedding return gifts (Invitation card boxes with
