--- a/history.html
+++ b/history.html
@@ -113,9 +113,7 @@
 					one another. The bestowing of gifts was also inferred as a status
 					symbol when leaders of tribes or clans would show their appreciation
 					for the contributions of those who were part of an important
-					achievement. At Gifts Ready To Go, you will find many gifts ideas to
-					help you find the perfect gift for any occasion and connect with
-					people around you.<br /><br />Whether it was an unusually shaped rock,
+					achievement.<br /><br />Whether it was an unusually shaped rock,
 					a tooth from an animal, the bark from a tree or some other item that
 					was natural in origin, the giving of gifts was certainly common
 					behavior long before we became an advanced civilization. As tools were
