--- a/about.html
+++ b/about.html
@@ -113,7 +113,7 @@
 					<br /><br />The wish we want to exchange to loved one's is always
 					their better wealth & health. Keeping purely this in our mind we took
 					up an innovative gift pack with 100% Natural and Healthy Ingredients
-					to make 10 delicious millets verities which every one cherishes the
+					to make 10 delicious millets varities which every one cherishes the
 					taste and fulfilling the promise of good health of our loved one's
 					whom you want to gift & care.
 				</p>
